Fix overflow for tags p and social icons in footer

--- a/source/sass/blocks/brand.scss
+++ b/source/sass/blocks/brand.scss
@@ -106,7 +106,6 @@
 
 .brand__description {
   max-width: 292px;
-  margin: 0;
   // padding-top: 17.5px;
   font-size: 15px;
   line-height: 24px;
